samples/_failures_safe/1761287180_55f1a8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5976955e.c: In function ‘main’:
./samples/SAFE/__tmp_5976955e.c:124:17: error: expected expression at end of input
  124 |                 if (removeEdge(graph, src,
      |                 ^~
./samples/SAFE/__tmp_5976955e.c:124:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5976955e.c:124:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5976955e.c:124:17: error: expected declaration or statement at end of input
